y.output
Nonterminals useless in grammar

   numero


Terminals unused in grammar

   TOK_PUNTOYCOMA
   TOK_COMA
   TOK_CORCHETEIZQUIERDO
   TOK_CORCHETEDERECHO
   TOK_ASIGNACION
   TOK_MAS
   TOK_MENOS
   TOK_DIVISION
   TOK_ASTERISCO
   TOK_NOT
   TOK_MENOR
   TOK_MAYOR
   TOK_ERROR
   fn_complete_name
   if_exp
   if_exp_sentencias
   tipo_retorno


Rules useless in grammar

   89 numero: digito
   90       | numero digito


Grammar

    0 $accept: programa $end

    1 programa: inicio TOK_MAIN '{' declaraciones funciones escritura_main sentencias '}' escribir_fin
    2         | inicio TOK_MAIN '{' funciones escritura_main sentencias '}'

    3 inicio: %empty

    4 escritura_main: %empty

    5 escribir_fin: %empty

    6 declaraciones: declaracion
    7              | declaracion declaraciones

    8 declaracion: clase identificadores ';'

    9 clase: clase_escalar
   10      | clase_vector

   11 clase_escalar: tipo

   12 tipo: TOK_INT
   13     | TOK_BOOLEANO

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   15 identificadores: identificador
   16                | identificador ',' identificadores

   17 funciones: %empty
   18          | funcion funciones

   19 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   21 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   22 funcion: TOK_FUNCTION tipo TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   23 parametros_funcion: parametro_funcion resto_parametros_funcion
   24                   | %empty

   25 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   26                         | %empty

   27 idpf: TOK_IDENTIFICADOR

   28 parametro_funcion: tipo idpf

   29 declaraciones_funcion: declaraciones
   30                      | %empty

   31 sentencias: sentencia
   32           | sentencia sentencias

   33 sentencia: sentencia_simple ';'
   34          | bloque

   35 sentencia_simple: asignacion
   36                 | lectura
   37                 | escritura
   38                 | retorno_funcion

   39 bloque: condicional
   40       | bucle

   41 asignacion: TOK_IDENTIFICADOR '=' exp
   42           | elemento_vector '=' exp

   43 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   44 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   45            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   46 bucle: while_exp sentencias '}'

   47 while: TOK_WHILE '('

   48 while_exp: while exp ')' '{'

   49 lectura: TOK_SCANF TOK_IDENTIFICADOR

   50 escritura: TOK_PRINTF exp

   51 retorno_funcion: TOK_RETURN exp

   52 exp: exp '+' exp
   53    | exp '-' exp
   54    | exp '/' exp
   55    | exp '*' exp
   56    | '-' exp
   57    | exp TOK_AND exp
   58    | exp TOK_OR exp
   59    | '!' exp
   60    | TOK_IDENTIFICADOR
   61    | constante
   62    | '(' exp ')'
   63    | '(' comparacion ')'
   64    | elemento_vector
   65    | identificador '(' lista_expresiones ')'

   66 lista_expresiones: exp resto_lista_expresiones
   67                  | %empty

   68 resto_lista_expresiones: ',' exp resto_lista_expresiones
   69                        | %empty

   70 comparacion: exp TOK_IGUAL exp
   71            | exp TOK_DISTINTO exp
   72            | exp TOK_MAYORIGUAL exp
   73            | exp TOK_MENORIGUAL exp
   74            | exp '>' exp
   75            | exp '<' exp

   76 constante: constante_logica
   77          | constante_entera

   78 constante_logica: TOK_TRUE
   79                 | TOK_FALSE

   80 constante_entera: TOK_CONSTANTE_ENTERA

   81 cola_identificador: alfanumerico
   82                   | alfanumerico cola_identificador

   83 alfanumerico: letra
   84             | digito

   85 letra: TOK_IDENTIFICADOR

   86 digito: TOK_CONSTANTE_ENTERA

   87 identificador: TOK_IDENTIFICADOR
   88              | letra cola_identificador


Terminals, with rules where they appear

$end (0) 0
'!' (33) 59
'(' (40) 22 44 45 47 62 63 65
')' (41) 22 44 45 48 62 63 65
'*' (42) 55
'+' (43) 52
',' (44) 16 68
'-' (45) 53 56
'/' (47) 54
';' (59) 8 25 33
'<' (60) 75
'=' (61) 41 42
'>' (62) 74
'[' (91) 14 43
']' (93) 14 43
'{' (123) 1 2 22 44 45 48
'}' (125) 1 2 22 44 45 46
error (256)
TOK_MAIN (258) 1 2
TOK_INT (259) 12
TOK_BOOLEANO (260) 13
TOK_ARRAY (261) 14
TOK_FUNCTION (262) 21 22
TOK_IF (263) 44 45
TOK_ELSE (264) 45
TOK_WHILE (265) 47
TOK_SCANF (266) 49
TOK_PRINTF (267) 50
TOK_RETURN (268) 51
TOK_IDENTIFICADOR (269) 21 22 27 41 43 49 60 85 87
TOK_PUNTOYCOMA (270)
TOK_COMA (271)
TOK_PARENTESISIZQUIERDO (272) 20
TOK_PARENTESISDERECHO (273) 20
TOK_CORCHETEIZQUIERDO (274)
TOK_CORCHETEDERECHO (275)
TOK_LLAVEIZQUIERDA (276) 20
TOK_LLAVEDERECHA (277) 19
TOK_ASIGNACION (278)
TOK_MAS (279)
TOK_MENOS (280)
TOK_DIVISION (281)
TOK_ASTERISCO (282)
TOK_AND (283) 57
TOK_OR (284) 58
TOK_NOT (285)
TOK_IGUAL (286) 70
TOK_DISTINTO (287) 71
TOK_MENORIGUAL (288) 73
TOK_MAYORIGUAL (289) 72
TOK_MENOR (290)
TOK_MAYOR (291)
TOK_CONSTANTE_ENTERA (292) 14 80 86
TOK_FALSE (293) 79
TOK_TRUE (294) 78
TOK_ERROR (295)
fn_complete_name (296)
if_exp (297)
if_exp_sentencias (298)
tipo_retorno (299)
MENOSU (300)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
programa (63)
    on left: 1 2, on right: 0
inicio (64)
    on left: 3, on right: 1 2
escritura_main (65)
    on left: 4, on right: 1 2
escribir_fin (66)
    on left: 5, on right: 1
declaraciones (67)
    on left: 6 7, on right: 1 7 29
declaracion (68)
    on left: 8, on right: 6 7
clase (69)
    on left: 9 10, on right: 8
clase_escalar (70)
    on left: 11, on right: 9
tipo (71)
    on left: 12 13, on right: 11 14 21 22 28
clase_vector (72)
    on left: 14, on right: 10
identificadores (73)
    on left: 15 16, on right: 8 16
funciones (74)
    on left: 17 18, on right: 1 2 18
funcion (75)
    on left: 19 22, on right: 18
fn_declaration (76)
    on left: 20, on right: 19
fn_name (77)
    on left: 21, on right: 20
parametros_funcion (78)
    on left: 23 24, on right: 20 22
resto_parametros_funcion (79)
    on left: 25 26, on right: 23 25
idpf (80)
    on left: 27, on right: 28
parametro_funcion (81)
    on left: 28, on right: 23 25
declaraciones_funcion (82)
    on left: 29 30, on right: 20 22
sentencias (83)
    on left: 31 32, on right: 1 2 19 22 32 44 45 46
sentencia (84)
    on left: 33 34, on right: 31 32
sentencia_simple (85)
    on left: 35 36 37 38, on right: 33
bloque (86)
    on left: 39 40, on right: 34
asignacion (87)
    on left: 41 42, on right: 35
elemento_vector (88)
    on left: 43, on right: 42 64
condicional (89)
    on left: 44 45, on right: 39
bucle (90)
    on left: 46, on right: 40
while (91)
    on left: 47, on right: 48
while_exp (92)
    on left: 48, on right: 46
lectura (93)
    on left: 49, on right: 36
escritura (94)
    on left: 50, on right: 37
retorno_funcion (95)
    on left: 51, on right: 38
exp (96)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65, on right: 41
    42 43 44 45 48 50 51 52 53 54 55 56 57 58 59 62 66 68 70 71 72
    73 74 75
lista_expresiones (97)
    on left: 66 67, on right: 65
resto_lista_expresiones (98)
    on left: 68 69, on right: 66 68
comparacion (99)
    on left: 70 71 72 73 74 75, on right: 63
constante (100)
    on left: 76 77, on right: 61
constante_logica (101)
    on left: 78 79, on right: 76
constante_entera (102)
    on left: 80, on right: 77
cola_identificador (103)
    on left: 81 82, on right: 82 88
alfanumerico (104)
    on left: 83 84, on right: 81 82
letra (105)
    on left: 85, on right: 83 88
digito (106)
    on left: 86, on right: 84
identificador (107)
    on left: 87 88, on right: 15 16 65


State 0

    0 $accept: . programa $end

    $default  reduce using rule 3 (inicio)

    programa  go to state 1
    inicio    go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: inicio . TOK_MAIN '{' declaraciones funciones escritura_main sentencias '}' escribir_fin
    2         | inicio . TOK_MAIN '{' funciones escritura_main sentencias '}'

    TOK_MAIN  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    1 programa: inicio TOK_MAIN . '{' declaraciones funciones escritura_main sentencias '}' escribir_fin
    2         | inicio TOK_MAIN . '{' funciones escritura_main sentencias '}'

    '{'  shift, and go to state 5


State 5

    1 programa: inicio TOK_MAIN '{' . declaraciones funciones escritura_main sentencias '}' escribir_fin
    2         | inicio TOK_MAIN '{' . funciones escritura_main sentencias '}'

    TOK_INT       shift, and go to state 6
    TOK_BOOLEANO  shift, and go to state 7
    TOK_ARRAY     shift, and go to state 8
    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 17 (funciones)

    declaraciones   go to state 10
    declaracion     go to state 11
    clase           go to state 12
    clase_escalar   go to state 13
    tipo            go to state 14
    clase_vector    go to state 15
    funciones       go to state 16
    funcion         go to state 17
    fn_declaration  go to state 18
    fn_name         go to state 19


State 6

   12 tipo: TOK_INT .

    $default  reduce using rule 12 (tipo)


State 7

   13 tipo: TOK_BOOLEANO .

    $default  reduce using rule 13 (tipo)


State 8

   14 clase_vector: TOK_ARRAY . tipo '[' TOK_CONSTANTE_ENTERA ']'

    TOK_INT       shift, and go to state 6
    TOK_BOOLEANO  shift, and go to state 7

    tipo  go to state 20


State 9

   21 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR
   22 funcion: TOK_FUNCTION . tipo TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_INT       shift, and go to state 6
    TOK_BOOLEANO  shift, and go to state 7

    tipo  go to state 21


State 10

    1 programa: inicio TOK_MAIN '{' declaraciones . funciones escritura_main sentencias '}' escribir_fin

    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 17 (funciones)

    funciones       go to state 22
    funcion         go to state 17
    fn_declaration  go to state 18
    fn_name         go to state 19


State 11

    6 declaraciones: declaracion .
    7              | declaracion . declaraciones

    TOK_INT       shift, and go to state 6
    TOK_BOOLEANO  shift, and go to state 7
    TOK_ARRAY     shift, and go to state 8

    $default  reduce using rule 6 (declaraciones)

    declaraciones  go to state 23
    declaracion    go to state 11
    clase          go to state 12
    clase_escalar  go to state 13
    tipo           go to state 14
    clase_vector   go to state 15


State 12

    8 declaracion: clase . identificadores ';'

    TOK_IDENTIFICADOR  shift, and go to state 24

    identificadores  go to state 25
    letra            go to state 26
    identificador    go to state 27


State 13

    9 clase: clase_escalar .

    $default  reduce using rule 9 (clase)


State 14

   11 clase_escalar: tipo .

    $default  reduce using rule 11 (clase_escalar)


State 15

   10 clase: clase_vector .

    $default  reduce using rule 10 (clase)


State 16

    2 programa: inicio TOK_MAIN '{' funciones . escritura_main sentencias '}'

    $default  reduce using rule 4 (escritura_main)

    escritura_main  go to state 28


State 17

   18 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 17 (funciones)

    funciones       go to state 29
    funcion         go to state 17
    fn_declaration  go to state 18
    fn_name         go to state 19


State 18

   19 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 30
    TOK_WHILE          shift, and go to state 31
    TOK_SCANF          shift, and go to state 32
    TOK_PRINTF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IDENTIFICADOR  shift, and go to state 35

    sentencias        go to state 36
    sentencia         go to state 37
    sentencia_simple  go to state 38
    bloque            go to state 39
    asignacion        go to state 40
    elemento_vector   go to state 41
    condicional       go to state 42
    bucle             go to state 43
    while             go to state 44
    while_exp         go to state 45
    lectura           go to state 46
    escritura         go to state 47
    retorno_funcion   go to state 48


State 19

   20 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 49


State 20

   14 clase_vector: TOK_ARRAY tipo . '[' TOK_CONSTANTE_ENTERA ']'

    '['  shift, and go to state 50


State 21

   21 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR
   22 funcion: TOK_FUNCTION tipo . TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_IDENTIFICADOR  shift, and go to state 51


State 22

    1 programa: inicio TOK_MAIN '{' declaraciones funciones . escritura_main sentencias '}' escribir_fin

    $default  reduce using rule 4 (escritura_main)

    escritura_main  go to state 52


State 23

    7 declaraciones: declaracion declaraciones .

    $default  reduce using rule 7 (declaraciones)


State 24

   85 letra: TOK_IDENTIFICADOR .
   87 identificador: TOK_IDENTIFICADOR .

    ';'       reduce using rule 87 (identificador)
    ','       reduce using rule 87 (identificador)
    $default  reduce using rule 85 (letra)


State 25

    8 declaracion: clase identificadores . ';'

    ';'  shift, and go to state 53


State 26

   88 identificador: letra . cola_identificador

    TOK_IDENTIFICADOR     shift, and go to state 54
    TOK_CONSTANTE_ENTERA  shift, and go to state 55

    cola_identificador  go to state 56
    alfanumerico        go to state 57
    letra               go to state 58
    digito              go to state 59


State 27

   15 identificadores: identificador .
   16                | identificador . ',' identificadores

    ','  shift, and go to state 60

    $default  reduce using rule 15 (identificadores)


State 28

    2 programa: inicio TOK_MAIN '{' funciones escritura_main . sentencias '}'

    TOK_IF             shift, and go to state 30
    TOK_WHILE          shift, and go to state 31
    TOK_SCANF          shift, and go to state 32
    TOK_PRINTF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IDENTIFICADOR  shift, and go to state 35

    sentencias        go to state 61
    sentencia         go to state 37
    sentencia_simple  go to state 38
    bloque            go to state 39
    asignacion        go to state 40
    elemento_vector   go to state 41
    condicional       go to state 42
    bucle             go to state 43
    while             go to state 44
    while_exp         go to state 45
    lectura           go to state 46
    escritura         go to state 47
    retorno_funcion   go to state 48


State 29

   18 funciones: funcion funciones .

    $default  reduce using rule 18 (funciones)


State 30

   44 condicional: TOK_IF . '(' exp ')' '{' sentencias '}'
   45            | TOK_IF . '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    '('  shift, and go to state 62


State 31

   47 while: TOK_WHILE . '('

    '('  shift, and go to state 63


State 32

   49 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 64


State 33

   50 escritura: TOK_PRINTF . exp

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 73
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 34

   51 retorno_funcion: TOK_RETURN . exp

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 78
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 35

   41 asignacion: TOK_IDENTIFICADOR . '=' exp
   43 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'

    '['  shift, and go to state 79
    '='  shift, and go to state 80


State 36

   19 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 81


State 37

   31 sentencias: sentencia .
   32           | sentencia . sentencias

    TOK_IF             shift, and go to state 30
    TOK_WHILE          shift, and go to state 31
    TOK_SCANF          shift, and go to state 32
    TOK_PRINTF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IDENTIFICADOR  shift, and go to state 35

    $default  reduce using rule 31 (sentencias)

    sentencias        go to state 82
    sentencia         go to state 37
    sentencia_simple  go to state 38
    bloque            go to state 39
    asignacion        go to state 40
    elemento_vector   go to state 41
    condicional       go to state 42
    bucle             go to state 43
    while             go to state 44
    while_exp         go to state 45
    lectura           go to state 46
    escritura         go to state 47
    retorno_funcion   go to state 48


State 38

   33 sentencia: sentencia_simple . ';'

    ';'  shift, and go to state 83


State 39

   34 sentencia: bloque .

    $default  reduce using rule 34 (sentencia)


State 40

   35 sentencia_simple: asignacion .

    $default  reduce using rule 35 (sentencia_simple)


State 41

   42 asignacion: elemento_vector . '=' exp

    '='  shift, and go to state 84


State 42

   39 bloque: condicional .

    $default  reduce using rule 39 (bloque)


State 43

   40 bloque: bucle .

    $default  reduce using rule 40 (bloque)


State 44

   48 while_exp: while . exp ')' '{'

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 85
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 45

   46 bucle: while_exp . sentencias '}'

    TOK_IF             shift, and go to state 30
    TOK_WHILE          shift, and go to state 31
    TOK_SCANF          shift, and go to state 32
    TOK_PRINTF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IDENTIFICADOR  shift, and go to state 35

    sentencias        go to state 86
    sentencia         go to state 37
    sentencia_simple  go to state 38
    bloque            go to state 39
    asignacion        go to state 40
    elemento_vector   go to state 41
    condicional       go to state 42
    bucle             go to state 43
    while             go to state 44
    while_exp         go to state 45
    lectura           go to state 46
    escritura         go to state 47
    retorno_funcion   go to state 48


State 46

   36 sentencia_simple: lectura .

    $default  reduce using rule 36 (sentencia_simple)


State 47

   37 sentencia_simple: escritura .

    $default  reduce using rule 37 (sentencia_simple)


State 48

   38 sentencia_simple: retorno_funcion .

    $default  reduce using rule 38 (sentencia_simple)


State 49

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT       shift, and go to state 6
    TOK_BOOLEANO  shift, and go to state 7

    $default  reduce using rule 24 (parametros_funcion)

    tipo                go to state 87
    parametros_funcion  go to state 88
    parametro_funcion   go to state 89


State 50

   14 clase_vector: TOK_ARRAY tipo '[' . TOK_CONSTANTE_ENTERA ']'

    TOK_CONSTANTE_ENTERA  shift, and go to state 90


State 51

   21 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .
   22 funcion: TOK_FUNCTION tipo TOK_IDENTIFICADOR . '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    '('  shift, and go to state 91

    $default  reduce using rule 21 (fn_name)


State 52

    1 programa: inicio TOK_MAIN '{' declaraciones funciones escritura_main . sentencias '}' escribir_fin

    TOK_IF             shift, and go to state 30
    TOK_WHILE          shift, and go to state 31
    TOK_SCANF          shift, and go to state 32
    TOK_PRINTF         shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_IDENTIFICADOR  shift, and go to state 35

    sentencias        go to state 92
    sentencia         go to state 37
    sentencia_simple  go to state 38
    bloque            go to state 39
    asignacion        go to state 40
    elemento_vector   go to state 41
    condicional       go to state 42
    bucle             go to state 43
    while             go to state 44
    while_exp         go to state 45
    lectura           go to state 46
    escritura         go to state 47
    retorno_funcion   go to state 48


State 53

    8 declaracion: clase identificadores ';' .

    $default  reduce using rule 8 (declaracion)


State 54

   85 letra: TOK_IDENTIFICADOR .

    $default  reduce using rule 85 (letra)


State 55

   86 digito: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 86 (digito)


State 56

   88 identificador: letra cola_identificador .

    $default  reduce using rule 88 (identificador)


State 57

   81 cola_identificador: alfanumerico .
   82                   | alfanumerico . cola_identificador

    TOK_IDENTIFICADOR     shift, and go to state 54
    TOK_CONSTANTE_ENTERA  shift, and go to state 55

    $default  reduce using rule 81 (cola_identificador)

    cola_identificador  go to state 93
    alfanumerico        go to state 57
    letra               go to state 58
    digito              go to state 59


State 58

   83 alfanumerico: letra .

    $default  reduce using rule 83 (alfanumerico)


State 59

   84 alfanumerico: digito .

    $default  reduce using rule 84 (alfanumerico)


State 60

   16 identificadores: identificador ',' . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 24

    identificadores  go to state 94
    letra            go to state 26
    identificador    go to state 27


State 61

    2 programa: inicio TOK_MAIN '{' funciones escritura_main sentencias . '}'

    '}'  shift, and go to state 95


State 62

   44 condicional: TOK_IF '(' . exp ')' '{' sentencias '}'
   45            | TOK_IF '(' . exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 96
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 63

   47 while: TOK_WHILE '(' .

    $default  reduce using rule 47 (while)


State 64

   49 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce using rule 49 (lectura)


State 65

   43 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   60 exp: TOK_IDENTIFICADOR .
   85 letra: TOK_IDENTIFICADOR .
   87 identificador: TOK_IDENTIFICADOR .

    '['  shift, and go to state 79

    TOK_IDENTIFICADOR     reduce using rule 85 (letra)
    TOK_CONSTANTE_ENTERA  reduce using rule 85 (letra)
    '('                   reduce using rule 87 (identificador)
    $default              reduce using rule 60 (exp)


State 66

   80 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 80 (constante_entera)


State 67

   79 constante_logica: TOK_FALSE .

    $default  reduce using rule 79 (constante_logica)


State 68

   78 constante_logica: TOK_TRUE .

    $default  reduce using rule 78 (constante_logica)


State 69

   56 exp: '-' . exp

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 97
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 70

   59 exp: '!' . exp

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 98
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 71

   62 exp: '(' . exp ')'
   63    | '(' . comparacion ')'

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 99
    comparacion       go to state 100
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 72

   64 exp: elemento_vector .

    $default  reduce using rule 64 (exp)


State 73

   50 escritura: TOK_PRINTF exp .
   52 exp: exp . '+' exp
   53    | exp . '-' exp
   54    | exp . '/' exp
   55    | exp . '*' exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 101
    TOK_OR   shift, and go to state 102
    '+'      shift, and go to state 103
    '-'      shift, and go to state 104
    '*'      shift, and go to state 105
    '/'      shift, and go to state 106

    $default  reduce using rule 50 (escritura)


State 74

   61 exp: constante .

    $default  reduce using rule 61 (exp)


State 75

   76 constante: constante_logica .

    $default  reduce using rule 76 (constante)


State 76

   77 constante: constante_entera .

    $default  reduce using rule 77 (constante)


State 77

   65 exp: identificador . '(' lista_expresiones ')'

    '('  shift, and go to state 107


State 78

   51 retorno_funcion: TOK_RETURN exp .
   52 exp: exp . '+' exp
   53    | exp . '-' exp
   54    | exp . '/' exp
   55    | exp . '*' exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 101
    TOK_OR   shift, and go to state 102
    '+'      shift, and go to state 103
    '-'      shift, and go to state 104
    '*'      shift, and go to state 105
    '/'      shift, and go to state 106

    $default  reduce using rule 51 (retorno_funcion)


State 79

   43 elemento_vector: TOK_IDENTIFICADOR '[' . exp ']'

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 108
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 80

   41 asignacion: TOK_IDENTIFICADOR '=' . exp

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 109
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 81

   19 funcion: fn_declaration sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 19 (funcion)


State 82

   32 sentencias: sentencia sentencias .

    $default  reduce using rule 32 (sentencias)


State 83

   33 sentencia: sentencia_simple ';' .

    $default  reduce using rule 33 (sentencia)


State 84

   42 asignacion: elemento_vector '=' . exp

    TOK_IDENTIFICADOR     shift, and go to state 65
    TOK_CONSTANTE_ENTERA  shift, and go to state 66
    TOK_FALSE             shift, and go to state 67
    TOK_TRUE              shift, and go to state 68
    '-'                   shift, and go to state 69
    '!'                   shift, and go to state 70
    '('                   shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 110
    constante         go to state 74
    constante_logica  go to state 75
    constante_entera  go to state 76
    letra             go to state 26
    identificador     go to state 77


State 85

   48 while_exp: while exp . ')' '{'
   52 exp: exp . '+' exp
   53    | exp . '-' exp
   54    | exp . '/' exp
   55    | exp . '*' exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 101
    TOK_OR   shift, and go to state 102
    '+'      shift, and go to state 103
    '-'      shift, and go to state 104
    '*'      shift, and go to state 105
    '/'      shift, and go to state 106
    ')'      shift, and go to state 111


State 86

   46 bucle: while_exp sentencias . '}'

    '}'  shift, and go to state 112


State 87

   28 parametro_funcion: tipo . idpf

    TOK_IDENTIFICADOR  shift, and go to state 113

    idpf  go to state 114


State 88

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  shift, and go to state 115


State 89

   23 parametros_funcion: parametro_funcion . resto_parametros_funcion

    ';'  shift, and go to state 116

    $default  reduce using rule 26 (resto_parametros_funcion)

    resto_parametros_funcion  go to state 117


State 90

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA . ']'

    ']'  shift, and go to state 118


State 91

   22 funcion: TOK_FUNCTION tipo TOK_IDENTIFICADOR '(' . parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_INT       shift, and go to state 6
    TOK_BOOLEANO  shift, and go to state 7

    $default  reduce using rule 24 (parametros_funcion)

    tipo                go to state 87
    parametros_funcion  go to state 119
    parametro_funcion   go to state 89


State 92

    1 programa: inicio TOK_MAIN '{' declaraciones funciones escritura_main sentencias . '}' escribir_fin

    '}'  shift, and go to state 120


State 93

   82 cola_identificador: alfanumerico cola_identificador .

    $default  reduce using rule 82 (cola_identificador)


State 94

   16 identificadores: identificador ',' identificadores .

    $default  reduce using rule 16 (identificadores)


State 95

    2 programa: inicio TOK_MAIN '{' funciones escritura_main sentencias '}' .

    $default  reduce using rule 2 (programa)


State 96
